<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context=".PersonalProfileActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="328dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="272dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="332dp"
        android:layout_height="65dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/hintPhone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="194dp"
        android:layout_height="108dp"
        android:layout_marginTop="412dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioMan"
            android:layout_width="192dp"
            android:layout_height="51dp"
            android:text="@string/radioMan"
            tools:layout_editor_absoluteX="-57dp"
            tools:layout_editor_absoluteY="555dp" />

        <RadioButton
            android:id="@+id/radioWoman"
            android:layout_width="192dp"
            android:layout_height="51dp"
            android:text="@string/radioWoman"
            tools:layout_editor_absoluteX="-46dp"
            tools:layout_editor_absoluteY="620dp" />
    </RadioGroup>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/ToolbarProfile"
        android:layout_width="418dp"
        android:layout_height="70dp"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/titleProfile"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnSalvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/btnCancelarProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnCancelarProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <CheckBox
        android:id="@+id/CheckBoxProfile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/CheckBoxProfile1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <CheckBox
        android:id="@+id/CheckBoxProfile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/CheckBoxProfile2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CheckBoxProfile3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/CheckBoxProfile3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641" />

</androidx.constraintlayout.widget.ConstraintLayout>